--- a/ppt/01.md
+++ b/ppt/01.md
@@ -1,9 +1,9 @@
 title: 课程概述
 speaker: whqet
-url: https://github.com/ksky521/nodePPT
-transition: slide
+url: https://zptcsoft.github.io/ppt/01.htm
+transition: stick
 files: /js/demo.js,/style/01.css,/js/zoom.js
-theme: moon
+theme: colors
 
 [slide]
 
