--- a/ppt/02.md
+++ b/ppt/02.md
@@ -1,20 +1,20 @@
-title: web标准
+title: web概述
 speaker: whqet
-url: https://github.com/ksky521/nodePPT
-transition: slide
+url: https://zptcsoft.github.io/ppt/02.htm
+transition: stick
 files: /js/demo.js,/style/01.css,/js/zoom.js
-theme: moon
+theme: colors
 
 [slide]
 
-# web标准
+# web概述
 ## 演讲者：whqet
 
 [slide]
 
 ## 内容提纲
 1. web标准 {:&.rollIn}
-2. 浏览器
+2. web浏览器
 3. web标准布局
 
 
@@ -46,7 +46,7 @@ theme: moon
 
 [slide]
 ## 结构标准语言
- <img src="/img/02/html-words-hyper-text-markup-language-their-acronym-spelled-out-colorful-cubes-crossword-puzzle-style-43453449.jpg">
+ <img src="/img/02/html.jpg">
 
 [slide]
 ## 表现标准语言
@@ -57,7 +57,7 @@ theme: moon
  <img src="/img/02/javascript-logo-png.png">
 
 [slide]
-## 浏览器
+## web浏览器
  <img src="/img/02/web-browsers.jpg" >
 
 [slide]
