--- a/ppt/03.md
+++ b/ppt/03.md
@@ -19,7 +19,7 @@ theme: colors
 4. html规范
 
 
-[slide style="background:url(/img/02/html.jpg) left 20% no-repeat; background-size:100%"]
+[slide style="background:url(./img/02/html.jpg) left 20% no-repeat; background-size:100%"]
 [magic data-transition="earthquake"]
 ## html简介 
 > 超文本标记语言 
@@ -35,11 +35,11 @@ theme: colors
 
 [/magic]
 
-[slide style="background:#fff url(/img/03/html5Timeline.png) left bottom no-repeat; background-size:100%"]
+[slide style="background:#fff url(./img/03/html5Timeline.png) left bottom no-repeat; background-size:100%"]
 ## html历史
 
 
-[slide style="background:#fff url(/img/03/html5Feature.png) left center no-repeat; background-size:100%"]
+[slide style="background:#fff url(./img/03/html5Feature.png) left center no-repeat; background-size:100%"]
 ## html5特性
 
 
@@ -153,5 +153,5 @@ theme: colors
 
 # 网页设计与制作
 ## 旨为前端开发工程师的前端开发基础课程
-<small style="vertical-align:middle;display:inline-block"><iframe src="https://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small>
+<small style="vertical-align:middle;display:inline-block"><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small>
 
