--- a/ppt/04.md
+++ b/ppt/04.md
@@ -16,7 +16,7 @@ theme: colors
 3. 元素分类
 
 
-[slide style="background:url(/img/02/html.jpg) left 20% no-repeat; background-size:100%"]
+[slide style="background:url(./img/02/html.jpg) left 20% no-repeat; background-size:100%"]
 ## html简介 
 > 超文本标记语言 
 
@@ -200,5 +200,5 @@ FALLBACK:
 [slide]
 # 网页设计与制作
 ## 旨为前端开发工程师的前端开发基础课程
-<small style="vertical-align:middle;display:inline-block"><iframe src="https://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small>
+<small style="vertical-align:middle;display:inline-block"><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small>
 
