添加ppt和修改readme

--- a/ppt/04.md
+++ b/ppt/04.md
@@ -79,7 +79,7 @@ theme: colors
 	</tr>
 	<tr>
 		<td>文本级<br>Text-level semantics</td>
-		<td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, dbd, br, wbr</td>
+		<td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, kbd, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, br, wbr</td>
 	</tr>
 	<tr>
 		<td>编辑 Edits</td>
