--- a/ppt/06.md
+++ b/ppt/06.md
@@ -1,4 +1,4 @@
-title: HTML文档元数据元素
+title: HTML文档元数据和脚本元素
 speaker: whqet
 url: https://zptcsoft.github.io/ppt/05.htm
 transition: stick
@@ -17,6 +17,8 @@ theme: colors
 4. base元素
 5. style元素
 6. link元素
+7. script元素和noscript元素
+8. canvas元素
 
 [slide]
 ## [元素概述](//w3school.com.cn/tags/html_ref_byfunc.asp)
@@ -46,7 +48,7 @@ theme: colors
 	</tr>
 	<tr>
 		<td>文本级<br>Text-level semantics</td>
-		<td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, dbd, br, wbr</td>
+		<td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, kbd, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, br, wbr</td>
 	</tr>
 	<tr>
 		<td>编辑 Edits</td>
@@ -202,7 +204,6 @@ theme: colors
 		</td>
 	</tr>
 </table>
-> base元素可以指定文档基准URL和基准target
 
 [slide]
 ## meta元素示例
@@ -382,6 +383,62 @@ theme: colors
 </body>
 </html>
 ```
+
+[slide] {:.flexbox.vleft}
+## [script元素](https://www.w3.org/TR/html/scripting-1.html#the-script-element)
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>元数据内容-Metadata content, 流内容-Flow content</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>head部分和body部分，body最下方最佳</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>有src属性，内容为空。无src属性，内容为script脚本</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			src属性，链接资源地址<br>
+			type属性， 链接资源类型<br>
+			charset属性，链接资源编码方式<br>
+			crossorigin属性，指定元素如何处理交叉源请求<br>
+			async属性， 异步执行脚本<br>
+			defer属性，推迟执行脚本
+		</td>
+	</tr>
+</table>
+
+[slide]
+## script元素示例
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<script src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+</head>
+<body>
+	<div class="content"></div>
+	<script src="//cdn.bootcss.com/jquery-jcrop/0.9.12/js/jquery.Jcrop.min.js"></script>
+	<script>
+		//do something
+	</script>
+</body>
+</html>
+```
+
+[slide style="background:url(./img/06/canvas.png) center center no-repeat;background-size:100%"]
+## canvas元素
+> 功能最为强大的html5元素
 
 [slide]
 # 网页设计与制作
