--- a/ppt/09.md
+++ b/ppt/09.md
@@ -128,7 +128,7 @@ theme: colors
 </figure>
 [/magic]
 
-[slide style="background:#fff url(/img/09/url.png) center bottom no-repeat;background-size:60%;color:#000;"] {:.flexbox.vleft}
+[slide style="background:#fff url(img/09/url.png) center bottom no-repeat;background-size:60%;color:#000;"] {:.flexbox.vleft}
 ## 媒体嵌入与资源地址
 1. 图像、视频等媒体**嵌入**网页中使用 {:&.fadeIn}
 2. 资源地址是嵌入媒体最终的依据
