--- a/ppt/09.md
+++ b/ppt/09.md
@@ -128,17 +128,67 @@ theme: colors
 </figure>
 [/magic]
 
-[slide style="background:#fff url(img/09/url.png) center bottom no-repeat;background-size:60%;color:#000;"] {:.flexbox.vleft}
+[slide style="background:#8B8B8B url(/img/09/url.png) center bottom no-repeat;background-size:70%;"] {:.flexbox.vleft}
 ## 媒体嵌入与资源地址
 1. 图像、视频等媒体**嵌入**网页中使用 {:&.fadeIn}
 2. 资源地址是嵌入媒体最终的依据
 3. Uniform Resource Locator（URL）
 
+[slide] {:.flexbox.vleft}
+## 绝对地址与相对地址
 
+```html 
+<!-- 绝对地址 -->
+<img src="file:///E:/zptcsoft.github.io/ppt/img/09/url.png" alt="">
+<img src="http://zptc.github.io/ppt/img/09/url.png" alt="">
+<img src="//zptc.github.io/ppt/img/09/url.png" alt=""> 
+
+<!-- 相对地址 -->
+<img src="img/09/url.png" alt="">
+<img src="./img/09/url.png" alt="">
+
+<!-- 资源地址相对地址、绝对地址均可。
+     可以使用http协议、https协议，但不能采用file协议。 
+     建议采用省略协议的方式
+		<img src="//zptc.github.io/ppt/img/09/url.png" alt="">     
+-->
+```
+
+[slide style="background:#487BD3 url(img/09/snippet.png) right bottom no-repeat;"] {:.flexbox.vleft}
+[magic data-transition="rollIn"]
+## Sublime text 新建Snippet
+- emmet对figure支持不佳 
+- Snippet方式支持figure
+
+====
+## 创建步骤
+1. 选择菜单**Tools/New Snippet…**，跳出Snippet编辑窗口
+2. 根据您的需要修改Snippet文件，figure代码修改如下
+3. 命名为*figure.sublime-snippet*, 存到**Packages**下的**user文件夹**
+4. 重启sublime text，使用**<kbd>mfig+tab</kbd>**即可激活
+
+```xml
+<snippet>
+	<content><![CDATA[
+<figure>
+	<figcaption>${1:图像标题}</figcaption>
+	<img src="${2:图像地址}" alt="${3:替代文本}">
+</figure>
+]]></content>
+	<!-- 可选: 设置如何激活该代码段 -->
+	<tabTrigger>mfig</tabTrigger>
+	<!-- 可选：设置作用域，默认为所有文档有效。 ctrl+alt+shift+p 状态栏获取文件作用域-->
+	<scope>text.html.basic</scope>
+	<!-- 可选，设置描述信息 -->
+	<!-- <description>My figure Snippet</description> -->
+</snippet>
+```
+> 了解如何[获取作用域](//github.com/zptcsoft/sublime-text-scope/blob/master/README.md)
+
+[/magic]
 
 
 [slide]
 # 网页设计与制作
 ## 旨为前端开发工程师的前端开发基础课程
 <small style="vertical-align:middle;display:inline-block"><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="//ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small>
-
