--- a/ppt/10.md
+++ b/ppt/10.md
@@ -120,7 +120,7 @@ theme: colors
 <!-- target="_top"，链接所在文件的顶端窗口(也即整个浏览器窗口)中打开链接 -->
 <a href="//www.baidu.com/s?wd=whqet" target="_top">whqet</a>
 ```
-<a href="//zptc.github.io/demo/link.html" target="_blank">实例文件</a>
+<a href="//zptcsoft.github.io/demo/link.html" target="_blank">实例文件</a>
 
 
 [slide]
