--- a/ppt/10.md
+++ b/ppt/10.md
@@ -66,6 +66,8 @@ theme: colors
 <a href="//wenku.baidu.com/search?word=html5">百度文库搜索html5</a>
 <!-- 普通链接，url中使用页内锚记 -->
 <a href="//baike.baidu.com/view/951383.htm#2">html5百科</a>
+<!-- 给图片添加链接 -->
+<a href="//www.baidu.com/s?wd=logo"><img src="https://www.baidu.com/img/baidu_jgylogo3.gif" alt=""></a>
 
 <!-- 邮件链接（使用邮件客户端），href属性使用mailto: -->
 <a href="mailto:whqet@qq.com?subject=Hello%20again">给庆哥打个招呼</a>
@@ -74,6 +76,7 @@ theme: colors
 <a href="//www.baidu.com/s?wd=html5">百度搜索html5</a>
 <a href="//wenku.baidu.com/search?word=html5">百度文库搜索html5</a>
 <a href="//baike.baidu.com/view/951383.htm#2">html5百科</a>
+<a href="//www.baidu.com/s?wd=logo"><img src="//www.baidu.com/img/baidu_jgylogo3.gif" height="22" alt=""></a>
 <a href="mailto:whqet@qq.com?subject=Hello%20again">给庆哥打个招呼</a>
 
 
@@ -121,7 +124,17 @@ theme: colors
 <a href="//www.baidu.com/s?wd=whqet" target="_top">whqet</a>
 ```
 <a href="//zptcsoft.github.io/demo/link.html" target="_blank">实例文件</a>
+<a href="//www.w3.org/TR/html/browsers.html#browsing-context"  target="_blank">target打开方式详细情况</a>
 
+[slide]
+## 链接到非网页文件
+```html
+<!-- 链接到图片 -->
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
+<!-- 链接到pdf -->
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">链接到pdf</a>
+```
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
 
 [slide]
 # 网页设计与制作
