--- a/ppt/10.md
+++ b/ppt/10.md
@@ -132,10 +132,10 @@ theme: colors
 <!-- 链接到图片 -->
 <a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
 <!-- 链接到pdf -->
-<a href="//zptcsoft.github.io/pdf/HTML5-cheat-sheet.pdf" target="_blank">html5 cheat sheet</a>
+<a href="//zptcsoft.github.io/pdf/samp.pdf" target="_blank">pdf</a>
 ```
 <a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
-<a href="//zptcsoft.github.io/pdf/HTML5-cheat-sheet.pdf" target="_blank">html5 cheat sheet</a>
+<a href="//zptcsoft.github.io/pdf/samp.pdf" target="_blank">pdf</a>
 
 [slide]
 # 网页设计与制作
