--- a/ppt/10.md
+++ b/ppt/10.md
@@ -123,19 +123,174 @@ theme: colors
 <!-- target="_top"，链接所在文件的顶端窗口(也即整个浏览器窗口)中打开链接 -->
 <a href="//www.baidu.com/s?wd=whqet" target="_top">whqet</a>
 ```
-<a href="//zptcsoft.github.io/demo/link.html" target="_blank">实例文件</a>
+<a href="/demos/link.html" target="_blank">实例文件</a>
 <a href="//www.w3.org/TR/html/browsers.html#browsing-context"  target="_blank">target打开方式详细情况</a>
 
-[slide]
+[slide] {:.flexbox.vleft}
 ## 链接到非网页文件
 ```html
 <!-- 链接到图片 -->
-<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">image</a>
 <!-- 链接到pdf -->
 <a href="//zptcsoft.github.io/pdf/samp.pdf" target="_blank">pdf</a>
+<!-- 链接到txt -->
+<a href="/img/10/hello.txt" target="_blank">txt</a>
+
+<!-- 链接到doc -->
+<a href="/img/10/samp.doc" target="_blank">doc</a>
+<!-- 链接到wav -->
+<a href="/img/10/samp.wav" target="_blank">wav</a>
+<!-- 链接到rar -->
+<a href="/img/10/samp.rar" target="_blank">rar</a>
 ```
-<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">百度logo</a>
-<a href="//zptcsoft.github.io/pdf/samp.pdf" target="_blank">pdf</a>
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" target="_blank">image</a>
+<a href="/img/10/pdf/samp.pdf" target="_blank">pdf</a>
+<a href="/img/10/hello.txt" target="_blank">txt</a>
+<a href="/img/10/samp.doc" target="_blank">doc</a>
+<a href="/img/10/samp.wav" target="_blank">wav</a>
+<a href="/img/10/samp.rar" target="_blank">rar</a>
+
+[slide] {:.flexbox.vleft}
+## download属性
+```html
+<!-- 链接到图片 -->
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif" download="true">image</a>
+<!-- 链接到pdf -->
+<a href="//zptcsoft.github.io/pdf/samp.pdf" download="true">pdf</a>
+<!-- 链接到txt -->
+<a href="/img/10/hello.txt"  download="true">txt</a>
+```
+<a href="//www.baidu.com/img/baidu_jgylogo3.gif"  download="true">image</a>
+<a href="/img/10/pdf/samp.pdf" download="true">pdf</a>
+<a href="/img/10/hello.txt" download="true">txt</a>
+
+[slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
+## 页内链接
+>实现一个网页内部的链接，例如目录等。
+
+====
+### 实现步骤
+```html
+<!-- 1. 定义目标锚记 -->
+<a id="top"></a>
+<!-- 2. 定义跳转链接 -->
+<a href="#top">回顶部</a>
+```
+
+### [案例演示](/demos/linkc.html)
+
+[/magic]
+
+[slide]{:.flexbox.vleft}
+[magic data-transition="fadeIn"]
+## 热区链接
+>在图片的不同区域设置链接
+
+====
+### map元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>流内容-Flow content <br>
+			短句内容-Phrasing content<br>
+			可感知内容-Palpable content
+		</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>期望出现短句内容的地方</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>透明</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			name属性 - 图像地图名称，以便img的usemap属性调用
+		</td>
+	</tr>
+</table>
+====
+### area 元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>流内容-Flow content <br>
+			短句内容-Phrasing content<br>
+		</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>map或者template</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>空，空元素，没有结束标签</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			shape属性 - 热区形状 <br>
+			coords属性 - 定义热区形状的坐标 <br>
+			href属性 - 链接地址,建议省略协议 <br>
+			target属性 - 链接打开方式 <br> 
+			download属性 - 链接用于下载<br>
+			rel属性 - 链接对象和链接所在文档之间的关系 <br>
+			hreflang属性 - 链接资源所用语言 <br>
+			type属性- 被链接文档的的 MIME 类型
+		</td>
+	</tr>
+</table>
+====
+### 热区链接语法
+```html
+<!-- 语法格式 -->
+<img src ="图像文件地址" usemap ="#映射图像名称">
+
+<map name="映射图像名称">
+	<!-- rect, (x1,y1)、(x2,y2)分别为左上角和右下角坐标 -->
+	<area shape="rect" coords="x1,y1,x2,y2" href="链接地址" alt="">
+	<!-- circle, (x,y)为圆心坐标，r为半径 -->
+	<area shape="circle" coords="x,y,r" href="链接地址" alt="">
+	<!-- poly,  (x1,y1)、(x2,y2)、(x3,y3)……分别为顶点坐标  --> 
+	<area shape="poly" coords="x1,y1,x2,y2,x3,y3,……" href="" alt="">
+</map>
+```
+
+====
+### 热区链接示例
+```html
+<!-- 使用案例 -->
+<img src="/img/10/pic.png" usemap="#myMap">
+<map name="myMap">
+	<area shape="rect" coords="50,50,100,100"> <!-- the hole in the red box -->
+	<area shape="rect" coords="25,25,125,125" href="//www.baidu.com/s?wd=red">
+	<area shape="circle" coords="200,75,50" href="//www.baidu.com/s?wd=green">
+	<area shape="poly" coords="325,25,262,125,388,125" href="//www.baidu.com/s?wd=blue" >
+	<area shape="poly" coords="450,25,435,60,400,75,435,90,450,125,465,90,500,75,465,60" 
+	href="//www.baidu.com/s?wd=yellow">
+</map>
+```
+<img src="/img/10/pic.png" usemap="#myMap">
+<map name="myMap">
+	<area shape="rect" coords="50,50,100,100"> 
+	<area shape="rect" coords="25,25,125,125" href="//www.baidu.com/s?wd=red">
+	<area shape="circle" coords="200,75,50" href="//www.baidu.com/s?wd=green">
+	<area shape="poly" coords="325,25,262,125,388,125" href="//www.baidu.com/s?wd=blue" >
+	<area shape="poly" coords="450,25,435,60,400,75,435,90,450,125,465,90,500,75,465,60" href="//www.baidu.com/s?wd=yellow">
+</map>
+
+[/magic]
 
 [slide]
 # 网页设计与制作
