add ppt11 and ppt 12

--- a/ppt/11.md
+++ b/ppt/11.md
@@ -15,9 +15,9 @@ theme: colors
 2. 无序列表
 3. 定义列表
 
-[slide]
+[slide] 
 ## [元素概述](//w3school.com.cn/tags/html_ref_byfunc.asp)
-<img src="/img/03/Periodic-Table-of-HTML-Elements-large.png" alt="">
+<iframe class="widder" src="//zptcsoft.github.io/html5-elements-periodic-table/" frameborder="0"></iframe>
 
 [slide] {:.flexbox.vleft}
 [magic data-transition="fadeIn"]
@@ -191,7 +191,7 @@ theme: colors
 
 ====
 
-## dl元素
+### dl元素
 <table class="thin tag">
 	<tr>
 		<th>类型</th><th>取值</th>
@@ -199,7 +199,7 @@ theme: colors
 	<tr>
 		<td>分类</td>
 		<td>流内容-Flow content <br>
-			如果子元素中至少有一个li，则变成可感知内容Palpable content
+			如果子元素中至少有一个dt-dd，则变成可感知内容Palpable content
 		</td>
 	</tr>
 	<tr>
@@ -208,7 +208,7 @@ theme: colors
 	</tr>
 	<tr>
 		<td>内容模型</td>
-		<td>li或script-supporting elements(script、template)</td>
+		<td>dt和dd组合</td>
 	</tr>
 	<tr>
 		<td>属性</td>
@@ -217,6 +217,84 @@ theme: colors
 		</td>
 	</tr>
 </table>
+
+====
+### dt元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>dl里的dd之前</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>流内容，但不能包含header、footer、节内容(article aside nav section)、标题内容(h1 h2 h3 h4 h5 h6)等</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+		</td>
+	</tr>
+</table>
+====
+### dd元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>dl里的dt之后</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>流内容</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+		</td>
+	</tr>
+</table>
+
+====
+### 定义列表示例-词典
+```html
+<dl>
+	<dt><dfn>happiness</dfn></dt>
+	<dd class="pronunciation">/'hæ p. nes/</dd>
+	<dd class="part-of-speech"><i><abbr>n.</abbr></i></dd>
+	<dd>The state of being happy.</dd>
+	<dd>Good fortune; success. <q>Oh <b>happiness</b>! It worked!</q></dd>
+	<dt><dfn>rejoice</dfn></dt>
+	<dd class="pronunciation">/ri jois'/</dd>
+	<dd><i class="part-of-speech"><abbr>v.intr.</abbr></i> To be delighted oneself.</dd>
+	<dd><i class="part-of-speech"><abbr>v.tr.</abbr></i> To cause one to be delighted.</dd>
+</dl>
+```
+<dl>
+	<dt><dfn>happiness</dfn></dt>
+	<dd class="pronunciation">/'hæ p. nes/</dd>
+	<dd class="part-of-speech"><i><abbr>n.</abbr></i></dd>
+	<dd>The state of being happy.</dd>
+	<dd>Good fortune; success. <q>Oh <b>happiness</b>! It worked!</q></dd>
+	<dt><dfn>rejoice</dfn></dt>
+	<dd class="pronunciation">/ri jois'/</dd>
+	<dd><i class="part-of-speech"><abbr>v.intr.</abbr></i> To be delighted oneself.</dd>
+	<dd><i class="part-of-speech"><abbr>v.tr.</abbr></i> To cause one to be delighted.</dd>
+</dl>
 
 [/magic]
 
