--- a/ppt/10.md
+++ b/ppt/10.md
@@ -15,9 +15,9 @@ theme: colors
 2. 页内连接
 3. 热区链接
 
-[slide]
+[slide] 
 ## [元素概述](//w3school.com.cn/tags/html_ref_byfunc.asp)
-<img src="/img/03/Periodic-Table-of-HTML-Elements-large.png" alt="">
+<iframe  class="widder" src="//zptcsoft.github.io/html5-elements-periodic-table/" frameborder="0"></iframe>
 
 [slide] {:.flexbox.vleft}
 ## 链接元素 a
