--- a/ppt/12.md
+++ b/ppt/12.md
@@ -196,9 +196,93 @@ theme: colors
 </table>
 ### 官方建议使用border属性表示是否为“布局”表格
 
-[slide]
+[slide] {:.flexbox.vleft}
 ## table属性实验
 <iframe  class="widder" src="/demos/table.html" frameborder="0"></iframe>
+
+[slide] {:.flexbox.vleft}
+## caption元素
+### 表格标题元素，可以利用align属性设置位置，最好利用css设置位置。
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>table元素的第一个子元素</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>流媒体，但是不能是th、tr、td等table的子元素标签</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 
+		</td>
+	</tr>
+</table>
+
+[slide] {:.flexbox.vleft}
+## tr元素
+### 代表表格的行
+### 可以作为thead、tbody、tfoot或table的子元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>可以作为thead、tbody、tfoot和table的子元素</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>0或者多个th或者td</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 
+		</td>
+	</tr>
+</table>
+
+[slide] {:.flexbox.vleft}
+## th元素
+### 代表表格的表头单元格，默认粗体居中显示
+### tr元素的子元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>tr元素的子元素</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>流内容，但不能是header、footer、节内容(article、side、nav、section)、标题元素(h1~h6)</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			
+		</td>
+	</tr>
+</table>
 
 [slide]
 # 网页设计与制作
