--- a/ppt/12.md
+++ b/ppt/12.md
@@ -16,7 +16,7 @@ theme: colors
 3. 表格案例
 
 [slide] 
-## [元素概述](//w3school.com.cn/tags/html_ref_byfunc.asp)
+<!-- ## [元素概述](//w3school.com.cn/tags/html_ref_byfunc.asp) -->
 <iframe class="widder" src="//zptcsoft.github.io/html5-elements-periodic-table/" frameborder="0"></iframe>
 
 [slide] {:.flexbox.vleft}
@@ -67,51 +67,27 @@ theme: colors
 </table>
 
 [slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
 ## table示例
 ```html
 <table border="1" summary="学生信息表">
 	<caption>学生信息表</caption>
 	<thead>
-		<tr>
-			<th>姓名</th>
-			<th>性别</th>
-			<th>年龄</th>
-			<th>班级</th>
-		</tr>
+		<tr><th>姓名</th><th>性别</th><th>年龄</th><th>班级</th></tr>
 	</thead>
 	<tfoot>
-		<tr>
-			<td colspan="4">*描述学生信息</td>
-		</tr>
+		<tr><td colspan="4">*描述学生信息</td></tr>
 	</tfoot>
 	<tbody>
-		<tr>
-			<td>张三</td>
-			<td>男</td>
-			<td>20</td>
-			<td>软件251</td>
-		</tr>
-		<tr>
-			<td>赵四</td>
-			<td>女</td>
-			<td>18</td>
-			<td>软件252</td>
-		</tr>
-		<tr>
-			<td>王五</td>
-			<td>男</td>
-			<td>21</td>
-			<td>软件257</td>
-		</tr>
-		<tr>
-			<td>田七</td>
-			<td>女</td>
-			<td>20</td>
-			<td>软件254</td>
-		</tr>
+		<tr><td>张三</td><td>男</td><td>20</td><td>软件251</td></tr>
+		<tr><td>赵四</td><td>女</td><td>18</td><td>软件252</td></tr>
+		<tr><td>王五</td><td>男</td><td>21</td><td>软件257</td></tr>
+		<tr><td>田七</td><td>女</td><td>20</td><td>软件254</td></tr>
 	</tbody>
 </table>
 ```
+
+====
 <table border="1" summary="学生信息表">
 	<caption>学生信息表</caption>
 	<thead>
@@ -154,6 +130,7 @@ theme: colors
 		</tr>
 	</tbody>
 </table>
+[/magic]
 
 [slide] {:.flexbox.vleft}
 ## table属性
@@ -256,6 +233,7 @@ theme: colors
 </table>
 
 [slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
 ## th元素
 ### 代表表格的表头单元格，默认粗体居中显示
 ### tr元素的子元素
@@ -279,10 +257,152 @@ theme: colors
 		<td>属性</td>
 		<td>
 			全局属性 <br>
-			
+			colspan属性，单元格所跨的列数 <br>
+			rowspan属性，单元格所跨的行数 <br>
+			headers属性，跟单元格相关的表头 <br>
+			scope属性，规定某个单元格是否是列、行、列组或行组的表头，可取row、col、rowgroup、colgroup等四个值。<br>
+			abbr属性，规定单元格中内容的缩写版本<br>
+			sorted属性，列的排序方向和序数
 		</td>
 	</tr>
 </table>
+====
+## th元素属性示例
+```html
+<table border="1">
+  <tr>
+    <th abbr="Company" scope="col">Company in USA</th>
+    <th scope="col">Address</th>
+  </tr>
+  <tr>
+    <td>Apple, Inc.</td>
+    <td>1 Infinite Loop Cupertino, CA 95014</td>
+  </tr>
+  <tr>
+    <td>Google, Inc.</td>
+    <td>1600 Amphitheatre Parkway Mountain View, CA 94043</td>
+  </tr>
+</table>
+```
+[/magic]
+
+[slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
+## td元素
+### 代表表格的单元格
+### tr元素的子元素
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>tr元素的子元素</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>流内容</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			colspan属性，单元格所跨的列数 <br>
+			rowspan属性，单元格所跨的行数 <br>
+			headers属性，跟单元格相关的表头 
+		</td>
+	</tr>
+</table>
+====
+## td元素示例
+```html
+<table border="1" width="100%">
+  <tr>
+    <th id="name">Name</td>
+    <th id="Email">Email</td>
+    <th id="Phone">Phone</td>
+    <th id="Address">Address</td>
+  </tr>
+  <tr>
+    <td headers="name">George Bush</td>
+    <td headers="Email">someone@example.com</td>
+    <td headers="Phone">+789451236</td>
+    <td headers="Address">Fifth Avenue New York,USA</td>
+  </tr>
+</table>
+```
+[/magic]
+
+[slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
+## col元素
+### 为表格中一个或多个列定义属性值
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>没有span属性的colgroup</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>空</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			span属性，该元素横跨的列数
+		</td>
+	</tr>
+</table>
+
+====
+### col元素示例
+```html
+<table width="100%" border="1">
+	<col style="width: 20%;">
+	<col style="width: 40%;">
+	<col style="width: 40%;">
+	<tr>
+		<th>ISBN</th>
+		<th>Title</th>
+		<th>Price</th>
+	</tr>
+	<tr>
+		<td>3476896</td>
+		<td>My first HTML</td>
+		<td>$53</td>
+	</tr>
+</table>
+```
+<table width="100%" border="1">
+	<colgroup>
+       <col span="1" style="width: 15%;">
+       <col span="1" style="width: 70%;">
+       <col span="1" style="width: 15%;">
+    </colgroup>
+	<tr>
+		<th>ISBN</th>
+		<th>Title</th>
+		<th>Price</th>
+	</tr>
+	<tr>
+		<td>3476896</td>
+		<td>My first HTML</td>
+		<td>$53</td>
+	</tr>
+</table>
+[/magic]
 
 [slide]
 # 网页设计与制作
