--- a/ppt/12.md
+++ b/ppt/12.md
@@ -24,7 +24,8 @@ theme: colors
 ### 表格不再用于布局页面，用于呈现网页数据
 ### 表格呈现多维的结构性数据
 ### 信息的可视化趋势，图化、表化
-<img src="\img\12\table.png" alt="">
+
+<img src="/img/12/table.png" alt="">
 
 
 [slide] {:.flexbox.vleft}
@@ -403,6 +404,78 @@ theme: colors
 	</tr>
 </table>
 [/magic]
+
+[slide] {:.flexbox.vleft}
+[magic data-transition="fadeIn"]
+## colgroup元素
+### 为表格中一个或多个列定义属性值
+<table class="thin tag">
+	<tr>
+		<th>类型</th><th>取值</th>
+	</tr>
+	<tr>
+		<td>分类</td>
+		<td>无</td>
+	</tr>
+	<tr>
+		<td>元素上下文</td>
+		<td>table元素的子元素，caption之后，thead\tfoot\tbody、tr之前</td>
+	</tr>
+	<tr>
+		<td>内容模型</td>
+		<td>col元素</td>
+	</tr>
+	<tr>
+		<td>属性</td>
+		<td>
+			全局属性 <br>
+			span属性，该元素横跨的列数
+		</td>
+	</tr>
+</table>
+
+====
+### colgroup元素示例
+```html
+<table width="100%" border="1">
+	<col style="background:none;">
+	<colgroup span="2" style="background:rgba(0,0,100,.2);"></colgroup>
+	<tr>
+		<th>ISBN</th>
+		<th>Title</th>
+		<th>Price</th>
+	</tr>
+	<tr>
+		<td>3476896</td>
+		<td>My first HTML</td>
+		<td>$53</td>
+	</tr>
+</table>
+```
+<table width="100%" border="1">
+	<colgroup>
+       <col span="1" style="width: 15%;">
+       <col span="1" style="width: 70%;">
+       <col span="1" style="width: 15%;">
+    </colgroup>
+	<tr>
+		<th>ISBN</th>
+		<th>Title</th>
+		<th>Price</th>
+	</tr>
+	<tr>
+		<td>3476896</td>
+		<td>My first HTML</td>
+		<td>$53</td>
+	</tr>
+</table>
+[/magic]
+
+[slide] {:.flexbox.vleft}
+## 表格综合实例
+### [细线表格](demos/editor.html?file=table01)
+### [隔行变色表格](demos/editor.html?file=table01)
+### [十字变色表格](demos/editor.html?file=table01)
 
 [slide]
 # 网页设计与制作
