--- a/ppt/12.md
+++ b/ppt/12.md
@@ -473,9 +473,10 @@ theme: colors
 
 [slide] {:.flexbox.vleft}
 ## 表格综合实例
-### [细线表格](demos/editor.html?file=table01)
-### [隔行变色表格](demos/editor.html?file=table01)
-### [十字变色表格](demos/editor.html?file=table01)
+### [细线表格](/demos/editor.html?file=table01)
+### [隔行变色表格](/demos/editor.html?file=table02)
+### [渐变背景色表格](/demos/editor.html?file=table03)
+> CSS美化表格详解第16讲
 
 [slide]
 # 网页设计与制作
