--- a/ppt/13.md
+++ b/ppt/13.md
@@ -13,10 +13,11 @@ theme: colors
 ## 内容提纲
 1. CSS简介 {:&.rollIn}
 2. CSS语法
+3. CSS历史
 
-[slide style="background:#25A1E1 url(/img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
+[slide style="background:#25A1E1 url(./img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
 ## CSS简介
-### 层叠样式表-Cascading Style Sheets
+### 层叠样式表-[Cascading Style Sheets](//)
 ### 网页内容的布局、美化，如果html是造房子，css就负责搞装修。
 ### [CSS zengarden](//www.csszengarden.com/)
 ### [CSS参考手册Github开源地址](//github.com/doyoe/css-handbook),[在线版](//zptcsoft.github.io/css3/)，[离线手册下载](//css.doyoe.com/css.chm)
@@ -55,7 +56,7 @@ p{
 ### 使用对象标签的style属性里定义样式
 ### 作用域限于本对象，且优先级最高
 ### 不推荐使用，因其丧失CSS的灵活性
-<iframe src="/demos/editor.html?file=inline" style="height:480px;"></iframe>
+<iframe src="/demos/editor.html?file=inline" style="height:300px;"></iframe>
 
 [slide] {:.flexbox.vleft}
 ## 使用css-页内方式
@@ -68,13 +69,21 @@ p{
 ## 使用css-外部样式表
 ### head标签中插入link标签导入外部CSS文件
 ### 作用域限于所有链接CSS的网页文档
-<iframe src="/demos/editor.html?file=linkcss" style="height:480px;"></iframe>
+<iframe src="/demos/editor.html?file=linkcss" style="height:360px;"></iframe>
 
 [slide] {:.flexbox.vleft}
-## 表格综合实例
-### [细线表格](/demos/editor.html?file=table01)
-### [隔行变色表格](/demos/editor.html?file=table02)
-### [渐变背景色表格](/demos/editor.html?file=table03)
+## css历史
+
+
+[slide] {:.flexbox.vleft}
+## w3工作流程
+1. 工作草案-Working Draft (WD)-标准的设计阶段
+2. 候选标准-Candidate Recommendation (CR)-标准的测试阶段
+3. 推荐标准-Recommendation (REC)-标准的完成阶段
+
+[slide style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) right center no-repeat;background-size:100%" ] {:.flexbox.vleft}
+## css现状
+
 
 [slide]
 # 网页设计与制作
