--- a/ppt/13.md
+++ b/ppt/13.md
@@ -81,7 +81,7 @@ p{
 2. 候选标准-Candidate Recommendation (CR)-标准的测试阶段
 3. 推荐标准-Recommendation (REC)-标准的完成阶段
 
-[slide style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) right center no-repeat;background-size:100%" ] {:.flexbox.vleft}
+[slide style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ] 
 ## css现状
 
 
