--- a/ppt/14.md
+++ b/ppt/14.md
@@ -1,4 +1,4 @@
-title: CSS初步
+title: CSS选择符
 speaker: whqet
 url: https://zptcsoft.github.io/ppt/05.htm
 transition: rollIn
@@ -6,25 +6,38 @@ files: /js/demo.js,/style/01.css,/js/zoom.js
 theme: colors
 
 [slide]
-# CSS初步
+# CSS选择符
 ## 演讲者：whqet
 
 [slide]
 ## 内容提纲
-1. CSS简介 {:&.rollIn}
-2. CSS语法
-3. CSS历史
+1. 选择符概要 {:&.rollIn}
+2. 元素选择符
+3. 属性选择符
+4. 伪类选择符
+5. 伪对象选择符
+6. 选择符实验
 
-[slide style="background:#25A1E1 url(./img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
-## CSS简介
-### 层叠样式表-[Cascading Style Sheets](//)
-### 网页内容的布局、美化，如果html是造房子，css就负责搞装修。
-### [CSS zengarden](//www.csszengarden.com/)
-### [CSS参考手册Github开源地址](//github.com/doyoe/css-handbook),[在线版](//zptcsoft.github.io/css3/)，[离线手册下载](//css.doyoe.com/css.chm)
+[slide style="background:#25A1E1 url(/img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
+## 选择符
+### 选择符类似于条件判断
+### 决定哪些元素得以匹配，应用CSS规则
+```css
+选择符{
+	CSS规则;
+}
+```
 
-[slide]
-## CSS特性
-#### 继承 & 覆盖
+[slide style="background:#25A1E1 url(/img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
+## 选择符标准
+[Selectors Level 3](//www.w3.org/TR/selectors/)标准
+-
+[Selectors Level 4](//www.w3.org/TR/selectors4/)工作草案
+
+[slide] {:.flexbox.vleft}
+## 选择符列表
+
+
 
 
 [slide] {:.flexbox.vleft}
@@ -85,7 +98,7 @@ p{
 3. 推荐标准-Recommendation (REC)-标准的完成阶段
 
 [slide style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ] 
-## [css现状](//www.w3.org/Style/CSS/current-work)
+## [css现状](//www.w3.org/TR/css-2015/)
 
 [slide]
 # 网页设计与制作
