--- a/ppt/14.md
+++ b/ppt/14.md
@@ -13,10 +13,11 @@ theme: colors
 ## 内容提纲
 1. 选择符概要 {:&.rollIn}
 2. 元素选择符
-3. 属性选择符
-4. 伪类选择符
-5. 伪对象选择符
-6. 选择符实验
+3. 关系选择符
+4. 属性选择符
+5. 伪类选择符
+6. 伪对象选择符
+7. 选择符实验
 
 [slide style="background:#25A1E1 url(/img/13/css3.jpg) left center no-repeat; background-size:100%" ] {:.flexbox.vleft}
 ## 选择符
@@ -36,69 +37,208 @@ theme: colors
 
 [slide] {:.flexbox.vleft}
 ## 选择符列表
-
-
-
+<iframe src="/demos/selectors.html" width="100%" frameborder="0"></iframe>
 
 [slide] {:.flexbox.vleft}
-## CSS语法
-### CSS基本逻辑——找见某个、某些元素“玩弄”它（们）
+## 元素选择符
+<table class="thin">
+	<thead>
+		<tr>
+			<th>选择符</th>
+			<th>名称</th>
+			<th>描述</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>*</td>
+			<td>通配选择符(Universal Selector)</td>
+			<td>任意元素</td>
+		</tr>
+		<tr>
+			<td>E</td>
+			<td>类型选择符(Type Selector)</td>
+			<td>E类型的元素</td>
+		</tr>
+		<tr>
+			<td>E#myid</td>
+			<td>id选择符(ID Selector)</td>
+			<td>id值为"myid"的E元素</td>
+		</tr>
+		<tr>
+			<td>E.myclass</td>
+			<td>class选择符(Class Selector)</td>
+			<td>class值为"myclass"的E元素</td>
+		</tr>
+	</tbody>
+</table>
+
+[slide] {:.flexbox.vleft}
+## 元素选择符
+### 通配符选择符——匹配任意元素
 ```css
 /*
-选择符{
-	一个属性: 属性值;
-  另一个属性: 属性值;
-            ……
-}
+  简单粗暴的选择符
+  简单CSS重置，书写简单，功能强大，但执行效率太低，建议使用CSS Reset或normalize.css
 */
-p{
-	text-indent:2em;
-	line-height:1.5;
+*{
+	padding:0;
+	margin: 0;
+}
+/*非常流行的用法，改变盒模型组成模式*/
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 ```
 
 [slide] {:.flexbox.vleft}
-
-## 使用css
-1. 内联方式 Inline Styles {:&.rollIn}
-2. 页内方式 Embedding a Style Block
-3. 外部样式表 Linking to a Style Sheet
-
-[slide] {:.flexbox.vleft}
-## 使用css-内联样式
-### 使用对象标签的style属性里定义样式
-### 作用域限于本对象，且优先级最高
-### 不推荐使用，因其丧失CSS的灵活性
-<iframe src="/demos/editor.html?file=inline" style="height:300px;"></iframe>
-
-[slide] {:.flexbox.vleft}
-## 使用css-页内方式
-### head标签中插入style标签定义样式
-### 作用域限于本文档
-### 如果确定某部分页码只限本页有效，且更新不频繁，页内方式使用css
-<iframe src="/demos/editor.html?file=style" style="height:480px;"></iframe>
+## 元素选择符
+### 类型选择符——以html标签类型作选择符
+```css
+/*
+  以html标签类型作选择符，范围内所有的该类型元素都会被选中
+  案例中选中所有的h1元素
+*/
+h1{
+	font-size: 48px;
+}
+```
 
 [slide] {:.flexbox.vleft}
-## 使用css-外部样式表
-### head标签中插入link标签导入外部CSS文件
-### 作用域限于所有链接CSS的网页文档
-<iframe src="/demos/editor.html?file=linkcss" style="height:360px;"></iframe>
+## 元素选择符
+### id选择符——以元素的id属性作为选择符
+### id为唯一标识符，正常情况下只选中一个元素
+```css
+/*
+  以元素的id属性作为选择符
+  一般用在页面布局上 
+*/
+#wrapper{
+	width:1000px;
+	margin: auto;
+}
+p#content{
+	text-indent: 2em;
+}
+```
+
 
 [slide] {:.flexbox.vleft}
-## css历史
-1. 1996.12.17, css1发布
-2. 1998.05.12，css2发布
-3. 2011.06.17，CSS2.1发布
-4. css3将CSS划分为小的模块逐个开发，目前进度不一。
+## 元素选择符
+### class选择符——以元素的class属性作为选择符
+```css
+/*
+	可以给一个元素设置多个类，以空格分开
+	<p class="content note">多类选择符的使用</p>
+*/
+/*选中class的content的元素*/
+.content{
+	text-align: left;
+}
+/*选中class的content的p类型元素*/
+p.note{
+	font-size: 24px;
+}
+/*选中同时具有content和note两个类的元素*/
+.content.note{
+	text-decoration: underline;
+}
+```
 
 [slide] {:.flexbox.vleft}
-## w3工作流程
-1. 工作草案-Working Draft (WD)-标准的设计阶段
-2. 候选标准-Candidate Recommendation (CR)-标准的测试阶段
-3. 推荐标准-Recommendation (REC)-标准的完成阶段
+## 关系选择符
+<table class="thin">
+	<thead>
+		<tr>
+			<th>选择符</th>
+			<th>名称</th>
+			<th>描述</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>E F</td>
+			<td>后代选择符</td>
+			<td>E元素的后代F元素</td>
+		</tr>
+		<tr>
+			<td>E</td>
+			<td>子代选择符</td>
+			<td>E元素的子代元素F</td>
+		</tr>
+		<tr>
+			<td>E#myid</td>
+			<td>相邻选择符</td>
+			<td>跟E后面相邻的F元素</td>
+		</tr>
+		<tr>
+			<td>E.myclass</td>
+			<td>兄弟选择符</td>
+			<td>E元素的后面兄弟F元素</td>
+		</tr>
+	</tbody>
+</table>
 
-[slide style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ] 
-## [css现状](//www.w3.org/TR/css-2015/)
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 后代选择符——选择所有层级的后代
+```css
+/*
+	选择所有层次的后代
+*/
+header nav{
+	color:rgba(0,100,20,.3);
+}
+```
+
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 子代选择符——选择儿子层级的后代
+```css
+/*
+	选择儿子层级的后代
+*/
+header>nav{
+	color:rgba(0,100,20,.3);
+}
+```
+
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 子代选择符与后代选择符的不同
+<iframe src="/demos/editor.html?file=selector_ef" style="height:400px;"></iframe>
+
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 相邻选择符——跟E后面相邻的F元素(E+F)
+```css
+/*
+	跟E后面相邻的F元素
+*/
+h2+p{
+	text-indent: 2em;
+}
+```
+
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 兄弟选择符——E元素的后面兄弟F元素(E~F)
+```css
+/*
+	E元素的后面兄弟F元素
+*/
+h2~p{
+	text-indent: 2em;
+}
+```
+
+[slide] {:.flexbox.vleft}
+## 关系选择符
+### 相邻选择符与兄弟选择符的不同
+<iframe src="/demos/editor.html?file=selector_sibling" style="height:400px;"></iframe>
+
 
 [slide]
 # 网页设计与制作
